# german-str

./: Cargo.toml  readme.md
src/: bumpalo.rs  lib.rs  long_str.rs  short_str.rs
