[package]
name = "german-str-borrow"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["m-mueller678"]
description = "German/Umbra-style strings. Data is allocated, borrowed, static, or inlined"
repository = "https://github.com/m-mueller678/german-str"
readme = "readme.md"
categories = ["data-structures"]
keywords = ["string","umbra-string","german-string"]

[dependencies]
bumpalo = { version = "3.17.0" ,optional = true}
